feat: support PHP 8.2+ and Laravel 10-12 with CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,16 @@ composer.phar
 composer.lock
 .DS_Store
 .phpunit.result.cache
+.phpunit.cache
 test.md
+*.log
+.env
+.env.*
+!.env.example
+build/
+coverage/
+docs/_build/
+.vscode/
+.idea/
+*.tmp
+*.temp
