--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,9 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "pestphp/pest": "^2.35",
-        "orchestra/testbench": "^9.3",
-        "mockery/mockery": "^1.6",
-        "laravel/legacy-factories": "^1.4"
+        "pestphp/pest": "^2.35|^3.0",
+        "orchestra/testbench": "^9.3|^10.0",
+        "mockery/mockery": "^1.6"
     },
     "config": {
         "allow-plugins": {
