feat: support PHP 8.2+ and Laravel 10-12 with CI/CD

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "TanDuy03",
-            "email": "ng.tanduy261203@gmail.com",
+            "email": "contact@ntanduy.com",
             "role": "Developer"
         }
     ],
