--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     "require": {
         "php": "^8.2",
         "doctrine/dbal": "^3.0|^4.0",
-        "illuminate/cache": "*",
-        "illuminate/contracts": "*",
-        "illuminate/database": "*",
-        "illuminate/http": "*",
-        "saloonphp/laravel-http-sender": "^2.0|^3.0",
+        "illuminate/cache": "^10.0|^11.0|^12.0",
+        "illuminate/contracts": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/http": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "saloonphp/laravel-plugin": "^3.5",
         "saloonphp/saloon": "^3.10"
     },
@@ -44,7 +44,7 @@
     "minimum-stability": "stable",
     "require-dev": {
         "pestphp/pest": "^2.35|^3.0",
-        "orchestra/testbench": "^9.3|^10.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
         "mockery/mockery": "^1.6"
     },
     "config": {
