--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,11 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "pestphp/pest": "^2.35|^3.0",
+        "laravel/pint": "^1.27",
+        "mockery/mockery": "^1.6",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "mockery/mockery": "^1.6"
+        "pestphp/pest": "^2.35|^3.0",
+        "phpstan/phpstan": "^2.1"
     },
     "config": {
         "allow-plugins": {
